--- a/Spring/WS/pom.xml
+++ b/Spring/WS/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>Spring-WS-Service</module>
 	    <module>Spring-WS-Client</module>
+        <module>Spring-WS-Lib</module>
     </modules>
 
 </project>
