--- a/Spring/WS/Spring-WS-Client/pom.xml
+++ b/Spring/WS/Spring-WS-Client/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>edu.javacourse.spring.ws</groupId>
-    <artifactId>client</artifactId>
+    <artifactId>spring-ws-client</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -18,12 +18,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>edu.javacourse.spring.ws</groupId>
+            <artifactId>spring-ws-lib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>4.1.2.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
