--- a/Spring/pom.xml
+++ b/Spring/pom.xml
@@ -13,6 +13,7 @@
         <module>Integration</module>
         <module>IoC</module>
         <module>JDBC</module>
+        <module>Spring-JMS</module>
         <module>WS</module>
     </modules>
 
