--- a/Spring/pom.xml
+++ b/Spring/pom.xml
@@ -14,6 +14,7 @@
         <module>IoC</module>
         <module>JDBC</module>
         <module>Spring-JMS</module>
+        <module>Spring-REST</module>
         <module>WS</module>
     </modules>
 
