Add WebSocket example skeleton

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>Velocity</module>
         <module>Web</module>
         <module>WebServices</module>
+        <module>WebSocket</module>
         <module>ZK</module>
     </modules>
 
