Move spring mvc to new version, simplify examples

--- a/Spring/MVC/GS_Spring_002/src/main/webapp/WEB-INF/web.xml
+++ b/Spring/MVC/GS_Spring_002/src/main/webapp/WEB-INF/web.xml
@@ -5,28 +5,29 @@
 
     <display-name>Archetype Created Web Application</display-name>
 
-
+    <!--/WEB-INF/database-config.xml-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/applicationContext.xml
             /WEB-INF/dispatcher-servlet.xml
-            /WEB-INF/database-config.xml
         </param-value>
     </context-param>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
