--- a/Spring/MVC/GS_Spring_003/pom.xml
+++ b/Spring/MVC/GS_Spring_003/pom.xml
@@ -1,17 +1,21 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>edu.javacourse</groupId>
+        <artifactId>examples</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../../../</relativePath>
+    </parent>
+
     <groupId>GS_Spring_003</groupId>
     <artifactId>GS_Spring_003</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <name>GS_Spring_003 Maven Webapp</name>
     <url>http://maven.apache.org</url>
-
-
-    <properties>
-        <spring.version>3.1.0.RELEASE</spring.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -33,23 +37,15 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
         </dependency>
-
 
     </dependencies>
 
-
-    <build>
-        <finalName>GS_Spring_003</finalName>
-    </build>
 </project>
