--- a/Spring/MVC/pom.xml
+++ b/Spring/MVC/pom.xml
@@ -2,20 +2,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.javacourse</groupId>
-    <artifactId>spring</artifactId>
+    <groupId>edu.javacourse.spring</groupId>
+    <artifactId>mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Spring</name>
+    <name>Spring MVC</name>
 
     <modules>
-        <module>Integration</module>
-        <module>IoC</module>
-        <module>JDBC</module>
-        <module>MVC</module>
-        <module>Spring-JMS</module>
-        <module>WS</module>
+        <module>GS_Spring_001</module>
+        <module>GS_Spring_002</module>
+        <module>GS_Spring_003</module>
     </modules>
 
 </project>
