--- a/Vaadin/VaadinExampleN01/pom.xml
+++ b/Vaadin/VaadinExampleN01/pom.xml
@@ -37,17 +37,17 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-server</artifactId>
-            <version>7.3.4</version>
+            <version>${vaadin.version}</version>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-client-compiled</artifactId>
-            <version>7.3.4</version>
+            <version>${vaadin.version}</version>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-themes</artifactId>
-            <version>7.3.4</version>
+            <version>${vaadin.version}</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
