--- a/WebServices/JAX-WS/AsyncWebService/AsyncWebService-war/pom.xml
+++ b/WebServices/JAX-WS/AsyncWebService/AsyncWebService-war/pom.xml
@@ -11,18 +11,17 @@
     </parent>
 
     <groupId>edu.javacourse.web-services</groupId>
-    <artifactId>AsyncWebService-ear</artifactId>
+    <artifactId>AsyncWebService-war</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>ear</packaging>
+    <packaging>war</packaging>
 
-    <name>WebServices AsyncWebService-ear</name>
+    <name>WebServices AsyncWebService-war</name>
 
     <dependencies>
         <dependency>
-            <groupId>edu.javacourse.web-services</groupId>
-            <artifactId>AsyncWebService-ejb</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>ejb</type>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
         </dependency>
     </dependencies>
+
 </project>
