Add camel, activemq, osgi bundles import

--- a/JbossFuse/pom.xml
+++ b/JbossFuse/pom.xml
@@ -11,6 +11,8 @@
 
     <modules>
         <module>fabric-master</module>
+        <module>FabricKarafCamelCXFActiveMQ</module>
+        <module>processor-bundle</module>
     </modules>
 
 </project>
