--- a/JbossFuse/processor-bundle/pom.xml
+++ b/JbossFuse/processor-bundle/pom.xml
@@ -10,48 +10,17 @@
     </parent>
 
     <groupId>edu.javacourse.fuse</groupId>
-    <artifactId>full-example</artifactId>
+    <artifactId>processor</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
-    <name>Jboss Fuse Full Example</name>
+    <name>Jboss Fuse Full Example processor bundle</name>
 
-    <properties>
-        <fabric8.jolokiaUrl>http://localhost:8181/jolokia</fabric8.jolokiaUrl>
-        <fabric8.upload>false</fabric8.upload>
-        <fabric8.profile>edu-javacourse-fuse-full.example</fabric8.profile>
-        <fabric8.parentProfiles>
-            default
-            feature-camel
-            mq-client-default
-        </fabric8.parentProfiles>
-        <fabric8.bundles>
-            mvn:edu.javacourse.fuse/processor/1.0-SNAPSHOT
-        </fabric8.bundles>
-        <fabric8.features>
-            activemq-camel
-        </fabric8.features>
-    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>edu.javacourse.fuse</groupId>
-            <artifactId>processor</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-core</artifactId>
-            <version>3.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -68,7 +37,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Export-Package></Export-Package>
+                        <Export-Package>edu.javacourse.fuse</Export-Package>
                         <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
