--- a/JbossFuse/FabricKarafCamelCXFActiveMQ/pom.xml
+++ b/JbossFuse/FabricKarafCamelCXFActiveMQ/pom.xml
@@ -30,6 +30,7 @@
         </fabric8.bundles>
         <fabric8.features>
             activemq-camel
+            camel-cxf
         </fabric8.features>
     </properties>
 
@@ -49,9 +50,8 @@
             <artifactId>activemq-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-core</artifactId>
-            <version>3.0.4</version>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-cxf</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -62,6 +62,33 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.jvnet.jax-ws-commons</groupId>
+                <artifactId>jaxws-maven-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>wsimport</goal>
+                        </goals>
+                        <id>wsimport-generate-SimpleWebService</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <sourceDestDir>${project.build.directory}/generated-sources/jaxws-wsimport</sourceDestDir>
+                    <xnocompile>true</xnocompile>
+                    <verbose>true</verbose>
+                    <vmArgs>
+                        <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
+                    </vmArgs>
+                    <extension>true</extension>
+                    <wsdlFiles>
+                        <wsdlFile>SimpleWebService.wsdl</wsdlFile>
+                    </wsdlFiles>
+                    <!--<wsdlLocation>http://localhost:8080/SimpleWebService-ejb-1.0-SNAPSHOT/SimpleWebService?wsdl</wsdlLocation>-->
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <version>2.5.3</version>
@@ -70,6 +97,7 @@
                     <instructions>
                         <Export-Package></Export-Package>
                         <Import-Package>*</Import-Package>
+                        <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
