--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,11 @@
                 <artifactId>camel-spring</artifactId>
                 <version>2.15.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-cxf</artifactId>
+                <version>2.15.1</version>
+            </dependency>
 
             <!-- ActiveMQ -->
             <dependency>
