--- a/JbossFuse/FabricKarafCamelCXFActiveMQ/pom.xml
+++ b/JbossFuse/FabricKarafCamelCXFActiveMQ/pom.xml
@@ -27,10 +27,14 @@
         </fabric8.parentProfiles>
         <fabric8.bundles>
             mvn:edu.javacourse.fuse/processor/1.0-SNAPSHOT
+            wrap:mvn:org.postgresql/postgresql/9.3-1102-jdbc41
+            mvn:org.apache.commons/commons-dbcp2/2.1.1
+            mvn:org.apache.commons/commons-pool2/2.4.2
         </fabric8.bundles>
         <fabric8.features>
             activemq-camel
             camel-cxf
+            camel-sql
         </fabric8.features>
     </properties>
 
@@ -52,6 +56,19 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-cxf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
