--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>EJB</module>
         <module>Hibernate</module>
         <module>JavaMail</module>
+        <module>JMX</module>
         <module>JQuery</module>
         <module>JSF</module>
         <module>JUnit</module>
