--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>JSF</module>
         <module>JUnit</module>
         <module>Logging</module>
+        <module>Mockito</module>
         <module>MyBatis</module>
         <module>Portlet</module>
         <module>Security</module>
@@ -37,7 +38,7 @@
 
     <properties>
         <maven.test.skip>true</maven.test.skip>
-        <source-code.version>1.7</source-code.version>
+        <source-code.version>1.8</source-code.version>
         <source-code.encoding>UTF-8</source-code.encoding>
         <ee.version>7.0</ee.version>
         <slf4j.version>1.7.13</slf4j.version>
@@ -299,6 +300,20 @@
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-camel</artifactId>
                 <version>5.11.1</version>
+            </dependency>
+
+            <!-- Test -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>2.8.9</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
