--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -10,6 +10,7 @@
     <name>Web</name>
 
     <modules>
+        <module>listener</module>
         <module>servlet-app</module>
         <module>servlet-jsp-app</module>
     </modules>
