--- a/Maven/ear-complex/pom.xml
+++ b/Maven/ear-complex/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>edu.javacourse</groupId>
-        <artifactId>examples</artifactId>
+        <groupId>edu.javacourse.maven</groupId>
+        <artifactId>ear-complex</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
@@ -17,12 +17,9 @@
     <name>Maven</name>
 
     <modules>
-        <module>ear-complex</module>
-        <module>jar-dependencies</module>
-        <module>jar-dependencies-local</module>
-        <module>jar-manifest</module>
-        <module>jar-simple</module>
-        <module>war-dependencies</module>
+        <module>ear</module>
+        <module>lib</module>
+        <module>war</module>
     </modules>
 
 </project>
