Add Log4j 2 example

--- a/Logging/pom.xml
+++ b/Logging/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>log4j</module>
+        <module>log4j2</module>
         <module>slf4j</module>
     </modules>
 
