Add junit suppirt from maven, add csv source to parametrized test

--- a/JUnit/JUnit-01/pom.xml
+++ b/JUnit/JUnit-01/pom.xml
@@ -16,21 +16,22 @@
 
     <name>JUnit 01</name>
 
+    <properties>
+        <maven.test.skip>false</maven.test.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
