--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
                 <artifactId>log4j</artifactId>
                 <version>2.10.0</version>
             </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.3</version>
+            </dependency>
 
             <!-- Web -->
             <dependency>
