--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>Security</module>
         <module>Spring</module>
         <module>Struts</module>
+        <module>TestContainers</module>
         <module>Vaadin</module>
         <module>Velocity</module>
         <module>Web</module>
@@ -41,8 +42,8 @@
     </modules>
 
     <properties>
-        <maven.test.skip>true</maven.test.skip>
-        <source-code.version>1.8</source-code.version>
+        <maven.test.skip>false</maven.test.skip>
+        <source-code.version>11</source-code.version>
         <source-code.encoding>UTF-8</source-code.encoding>
         <ee.version>7.0</ee.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -422,13 +423,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.21.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.2.0</version>
-                    </dependency>
-                </dependencies>
+<!--                <dependencies>-->
+<!--                    <dependency>-->
+<!--                        <groupId>org.junit.platform</groupId>-->
+<!--                        <artifactId>junit-platform-surefire-provider</artifactId>-->
+<!--                        <version>1.2.0</version>-->
+<!--                    </dependency>-->
+<!--                </dependencies>-->
             </plugin>
         </plugins>
     </build>
