--- a/TestContainers/postgres-test-container/pom.xml
+++ b/TestContainers/postgres-test-container/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">`
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
-            <version>1.12.3</version>
+            <version>1.12.5</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -40,4 +40,4 @@
         </dependency>
     </dependencies>
 
-</project>
+`</project>
